docs: add missing descriptions in action.yaml

--- a/action.yaml
+++ b/action.yaml
@@ -1,15 +1,20 @@
 name: NPM Publish Dev
+description: Publish an npm package appending timestamp and commit sha to current version
 
 inputs:
   access:
+    description: Visibility of package, allowed values are 'null', 'public' and 'restricted'
     required: false
     default: "null"
   node-version:
+    description: Node version used to install and publish the package
     required: false
     default: "lts/*"
   npm-token:
+    description: NPM access token used to publish the package to the npm registry
     required: true
   tag:
+    description: Tag under which the package will be published
     required: false
     default: "dev"
 
