--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
-
 name: CI
 
 on:
   pull_request:
+
 jobs:
   commitlint:
     runs-on: ubuntu-latest
     steps:
-    - uses: remindgmbh/commitlint-action@main
+      - uses: remindgmbh/commitlint-action@v1.0.0
